--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indecision-app",
+  "name": "pocket-money",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Tejas Bhosale",
