--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "webpack": "3.1.0",
