--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "sass-loader": "6.0.6",
