--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "live-server": "^1.2.0",
+    "moment": "^2.22.2",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "npm": "^6.2.0",
     "react": "16.0.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^18.0.2",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
     "react-redux": "^5.0.7",
