--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "live-server public/",
     "build": "webpack",
     "dev-server": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest --config=jest.config.json"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -19,11 +19,13 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "enzyme-to-json": "^3.3.4",
     "live-server": "^1.2.0",
     "moment": "^2.22.2",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "npm": "^6.2.0",
+    "raf": "^3.4.0",
     "react": "16.0.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^18.0.2",
@@ -31,6 +33,7 @@
     "react-modal": "2.2.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.5.2",
     "redux": "^4.0.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
@@ -39,6 +42,8 @@
     "webpack-dev-server": "2.5.1"
   },
   "devDependencies": {
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "jest": "^23.6.0"
   }
 }
