--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "enzyme-to-json": "^3.3.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "live-server": "^1.2.0",
     "moment": "^2.22.2",
     "node-sass": "4.5.3",
