--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -21,6 +23,7 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "enzyme-to-json": "^3.3.4",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "live-server": "^1.2.0",
     "moment": "^2.22.2",
