setup devdependencies and dist folder{this is where the webpack created files are saved}

--- a/.gitignore
+++ b/.gitignore
@@ -35,10 +35,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-public/bundle.js
-public/bundle.js.map
-public/styles.css
-public/styles.css.map
+public/dist/
 
 # TypeScript v1 declaration files
 typings/
