--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Tejas Bhosale",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -22,10 +21,8 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
-    "enzyme-to-json": "^3.3.4",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
-    "live-server": "^1.2.0",
     "moment": "^2.22.2",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
@@ -38,17 +35,18 @@
     "react-modal": "2.2.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.5.2",
     "redux": "^4.0.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "^3.3.2",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack": "3.1.0"
   },
   "devDependencies": {
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "enzyme-to-json": "^3.3.4",
+    "react-test-renderer": "^16.5.2",
+    "webpack-dev-server": "2.5.1"
   }
 }
