--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "npm": "^6.2.0",
+    "numeral": "^2.0.6",
     "raf": "^3.4.0",
     "react": "16.0.0",
     "react-addons-shallow-compare": "^15.6.2",
@@ -44,8 +45,8 @@
   "devDependencies": {
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "jest": "^23.6.0",
     "enzyme-to-json": "^3.3.4",
+    "jest": "^23.6.0",
     "react-test-renderer": "^16.5.2",
     "webpack-dev-server": "2.5.1"
   }
